2003-02-12  Bruno Haible  <bruno@clisp.org>

	Extracted from gettext package.
	* configure.ac: New file.
	* Makefile.am: New file.
	* AUTHORS, BUGS, COPYING, INSTALL, NEWS, README: New files.
